--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "404_error/Hw4",
+    "name": "excalibur/Hw4",
     "type": "Hw4_project",
     "authors": [
         {
@@ -13,5 +13,10 @@
     ],
     "require": {
         "monolog/monolog": "1.0.*"
+    },
+    "autoload": {
+    	"psr-4": {
+    	"excalibur\\hw4\\": "src/"	
+    	}
     }
 }
